fix task form loading shift

--- a/frontend/src/styles/task_form.scss
+++ b/frontend/src/styles/task_form.scss
@@ -154,3 +154,8 @@
     color: black;
     cursor: pointer;
 }
+
+.task-form-loader {
+    position: absolute;
+    font-weight: 500;
+}
